# gamebattle-backend

./: .flake8  .gitignore  .gitmodules  Dockerfile  README.md  auth.py  containers.py  pyproject.toml  requirements.txt  serve.py  server.py
.github/workflows/: build_manager.yaml
gamebattle_backend/: __init__.py  api.py  auth.py  builder.py  common.py  container.py  container_attached.py  containers.py  game.py  launcher.py  manager.py  mqueue.py  preference_store_redis.py  preferences.py  report.py  report_store_redis.py  session.py  summarize.py
